--- a/cards-d100923er/public/index.html
+++ b/cards-d100923er/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="assets/images/avatarCards.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -30,7 +30,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
     />
-    <title>cards projects</title>
+    <title>theBusi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
